@@ -43,14 +43,18 @@ public class CodelistQueryConverter implements IQueryParser{
 
     @Override
     public PrefinishedOutput convertWithQuery(RepositoryConnection rc) {
-        loadConfiguration();
-        String query = getCSVTableQueryForModel();
+        //loadConfiguration();
+        //String query = getCSVTableQueryForModel();
 
-        String queryResult = queryRDFModel(query);
-        FileWrite.saveCSVFileFromRows(CSVFileTOWriteTo, keys, rows, delimiter);
-        return new PrefinishedOutput(queryResult);
+        //String queryResult = queryRDFModel(query);
+        //FileWrite.saveCSVFileFromRows(CSVFileTOWriteTo, keys, rows, delimiter);
+        //return new PrefinishedOutput(queryResult);
+        return null;
 
     }
+
+
+    /*
 
     private void loadConfiguration(){
         Properties prop = new Properties();
@@ -132,11 +136,11 @@ public class CodelistQueryConverter implements IQueryParser{
         for(Row row : rows){
             ArrayList<Value> missingKeys = new ArrayList<>();
             for(Value key : keys){
-                if(!row.map.keySet().contains(key)){
+                if(!row.columns.keySet().contains(key)){
                     missingKeys.add(key);
                 }
             }
-            missingKeys.forEach(key -> row.map.put(key, null));
+            missingKeys.forEach(key -> row.columns.put(key, null));
         }
     }
 
@@ -147,15 +151,19 @@ public class CodelistQueryConverter implements IQueryParser{
             // we just iterate over all solutions in the result...
             for (BindingSet solution : result) {
 
-                System.out.println("recursiveQueryForSubjects p=" + solution.getValue("p") + " o=" + solution.getValue("o"));
+                //System.out.println("recursiveQueryForSubjects p=" + solution.getValue("p") + " o=" + solution.getValue("o"));
                 if(root.id.equals(subject)){
-                    if(root.map.get(solution.getValue("p")) != null){
+                    if(root.columns.get(solution.getValue("p")) != null){
                         //List<Value> oldStringValue = root.map.get(solution.getBinding("p").getValue());
-                        List<Value> oldStringValue = new ArrayList<>(root.map.get(solution.getBinding("p").getValue()));
+                        List<Value> oldStringValue = new ArrayList<>(root.columns.get(solution.getBinding("p").getValue()).values);
                         oldStringValue.add(solution.getBinding("o").getValue());
-                        root.map.put(solution.getBinding("p").getValue(), oldStringValue );
+                        TypeIdAndValues oldTypeAndValues = root.columns.get(solution.getBinding("p").getValue());
+                        oldTypeAndValues.values = oldStringValue;
+                        root.columns.put(solution.getBinding("p").getValue(), oldTypeAndValues );
                     } else{
-                        root.map.put(solution.getValue("p"), new ArrayList<>(Arrays.asList(solution.getBinding("o").getValue())));
+                        TypeOfValue newType = (solution.getBinding("o").getValue().isIRI()) ? TypeOfValue.IRI :
+                                (solution.getBinding("o").getValue().isBNode()) ? TypeOfValue.BNODE : TypeOfValue.LITERAL;
+                        root.columns.put(solution.getValue("p"),new TypeIdAndValues( subject, newType, new ArrayList<>(Arrays.asList(solution.getBinding("o").getValue()))));
                     }
 
                     if(!keys.contains(solution.getValue("p"))){
@@ -163,8 +171,9 @@ public class CodelistQueryConverter implements IQueryParser{
                     }
                 } else {
                 // TODO Provide sensible headers for all data in just one csv
-
-                    root.map.put(solution.getValue("p"), List.of(solution.getValue("o")));
+                    TypeOfValue newType = (solution.getBinding("o").getValue().isIRI()) ? TypeOfValue.IRI :
+                            (solution.getBinding("o").getValue().isBNode()) ? TypeOfValue.BNODE : TypeOfValue.LITERAL;
+                    root.columns.put(solution.getValue("p"), new TypeIdAndValues(subject, newType, new ArrayList<>(Arrays.asList(solution.getBinding("o").getValue()))));
                     if(!keys.contains(solution.getValue("p"))) {
 
                         keys.add(solution.getValue("p"));
@@ -189,4 +198,6 @@ public class CodelistQueryConverter implements IQueryParser{
         System.out.println("createQueryForSubjects: "  + selectQuery.getQueryString());
         return selectQuery.getQueryString();
     }
+
+     */
 }
